--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@react-spring/three": "^9.0.0-beta.33",
     "prop-types": "latest",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "2.1.8",
-    "react-spring": "8.0.11",
+    "react-spring": "^8.0.11",
     "react-three-fiber": "^2.0.0",
     "styled-components": "^4.4.1",
     "three": "0.102.1"
